--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
 .Python
 build/
 develop-eggs/
@@ -19,38 +20,41 @@ wheels/
 .installed.cfg
 *.egg
 
-# C++
-*.o
-*.out
-*.exe
-*.app
-*.i*86
-*.x86_64
-*.hex
+# Virtual Environment
+venv/
+env/
+ENV/
 
-# Project specific
-output/
-*.bin
-optimized.cpp
-
-# IDEs
-.vscode/
+# IDE
 .idea/
+.vscode/
 *.swp
 *.swo
 
-# Environment
-.env
-.venv
-env/
-venv/
-ENV/
+# Project specific
+output/
+*.cu.o
+*.ptx
+optimization_log.json
 
-# OS
+# Secrets
+.env
+*.key
+api_keys.txt
+
+# CUDA
+*.i
+*.ii
+*.gpu
+*.ptx
+*.cubin
+*.fatbin
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Misc
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+*.log
