--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-numpy>=1.24.0
-requests>=2.31.0
+torch>=2.0.0
+numpy>=1.20.0
+pytest>=7.0.0
+requests>=2.25.0
+python-dotenv>=0.19.0  # For managing environment variables
+datasets  # For HuggingFace dataset access
