--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ numpy>=1.20.0
 pytest>=7.0.0
 requests>=2.25.0
 python-dotenv>=0.19.0  # For managing environment variables
-datasets  # For HuggingFace dataset access
+git+https://github.com/ScalingIntelligence/KernelBench.git
